# web-search-skills

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml  requirements.txt  skill.md  ws.py
config/: engines.json
examples/: __init__.py  basic_search.py  multi_source_search.py
references/: search-operators.md
scripts/: __init__.py  cli.py  unified_search.py
scripts/academic/: __init__.py  arxiv.py
scripts/core/: __init__.py  base.py  config_loader.py  thread_utils.py
scripts/engines/: __init__.py  baidu_qianfan.py  parser_engines.py  url_engine.py
scripts/news/: __init__.py  cls.py  rss.py  tech_news.py  wallstreetcn.py
scripts/social/: __init__.py  twitter.py
scripts/wechat/: __init__.py  sogou_weixin.py
src/: __init__.py  web_search.py
