[project]
name = "web-search-skills"
version = "2.2.0"
description = "Multi-source web search CLI tool"
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
]

[project.scripts]
web-search = "scripts.cli:main"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["scripts*"]
